--- a/src/Cart/Cart.css
+++ b/src/Cart/Cart.css
@@ -1,6 +1,17 @@
-.cart{
+.cart {
     background-color: rgba(255, 153, 0, 0.3);
     padding: 25px;
     position: sticky;
     top: 0;
+}
+
+.btn-clear-cart {
+    background: #FF3030;
+    border-radius: 4px;
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    align-items: center;
+    height: 56px;
 }
