--- a/src/components/Orders/Order.css
+++ b/src/components/Orders/Order.css
@@ -1,3 +1,13 @@
 .review-container{
     margin: 50px auto;
 }
+.proceed-checkout{
+    background: #FF9900;
+    border-radius: 4px;
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    align-items: center;
+    height: 56px;
+}
